--- a/xpi/content/css/hide_ibinfoico2.css
+++ b/xpi/content/css/hide_ibinfoico2.css
@@ -9,7 +9,8 @@
 	#urlbar[pageproxystate="valid"] .mixedDisplayContent #identity-icon,
 	#urlbar[pageproxystate="valid"] .mixedDisplayContentLoadedActiveBlocked #identity-icon,
 	#urlbar[pageproxystate="valid"] .mixedActiveBlocked #identity-icon {
-	  visibility: collapse;
+	  visibility: hidden;
+      -moz-margin-end: -2px !important;
 	}
 
 	#urlbar[pageproxystate="valid"] .verifiedDomain #connection-icon,
@@ -20,7 +21,7 @@
 	#urlbar[pageproxystate="valid"] .mixedDisplayContent #connection-icon,
 	#urlbar[pageproxystate="valid"] .mixedDisplayContentLoadedActiveBlocked #connection-icon,
 	#urlbar[pageproxystate="valid"] .mixedActiveBlocked #connection-icon {
-	  -moz-padding-start: 0 !important;
-	  -moz-margin-start: 0 !important;
+	  -moz-margin-start: -14px !important;
+      -moz-margin-end: 1px !important;
 	}
 }
