--- a/xpi/content/css/mode_icons_big.css
+++ b/xpi/content/css/mode_icons_big.css
@@ -331,6 +331,17 @@
 	  max-width: unset !important;
 	}
 	
+	/* Fx45 fix */
+	#main-window[fx45plus="true"][defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
+	  -moz-padding-start: 4px !important;
+	  -moz-padding-end: 5px !important;
+	}
+	
+	#main-window[fx45plus="true"] #identity-icon,
+	#main-window[fx45plus="true"] #tracking-protection-icon,
+	#main-window[fx45plus="true"] #connection-icon {
+	  min-height: 16px !important;
+	}
 	
 	/* Auto Form add-ons icon sizes*/
 	#nav-bar toolbarbutton[id^="af_button"] .toolbarbutton-icon {
