--- a/xpi/content/css/win8/mode_icons_big_extra.css
+++ b/xpi/content/css/win8/mode_icons_big_extra.css
@@ -47,7 +47,7 @@
 	}
 
 	#nav-bar #forward-button {
-	  width:38px !important;
+	  width: 38px !important;
 	}
 	
 	#forward-button:not([disabled]){
@@ -60,6 +60,21 @@
 	  padding-bottom: 2px !important;
 	}
 
+	@media (-moz-os-version: windows-win10) {
+	  #main-window[fx31="true"][fx45plus="true"] #navigator-toolbox #nav-bar #urlbar-container #forward-button {
+		margin-top:-7px !important;
+		margin-bottom:-7px !important;
+	  }
+ 	  #main-window[fx31="true"][fx45plus="true"] #navigator-toolbox #nav-bar #urlbar-container #forward-button .toolbarbutton-icon {
+		-moz-padding-start: 6px !important;
+	  }
+	  #main-window[fx45plus="true"] #nav-bar #back-button > .toolbarbutton-icon {
+		padding-top: 4px !important;
+		padding-bottom: 4px !important;
+	  }
+	}
+	
+	
 	#nav-bar #forward-button{
 	  -moz-image-region: rect(0px, 96px, 32px, 64px) !important;
 	  list-style-image: url(chrome://classic_theme_restorer/content/images/menuPanel3.png) !important;
@@ -146,7 +161,7 @@
 	#main-window[fx40plus="true"] #nav-bar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #ctraddon_preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #panic-button, #web-apps-button, #webide-button, #loop-button, #pocket-button):-moz-any([cui-areatype="toolbar"],:not([cui-areatype])) > .toolbarbutton-icon,
 	#main-window[fx40plus="true"] #nav-bar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #ctraddon_preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #panic-button, #web-apps-button, #webide-button, #loop-button, #pocket-button):-moz-any([cui-areatype="toolbar"],:not([cui-areatype])) > .toolbarbutton-menubutton-button > .toolbarbutton-icon,
 	#main-window[fx40plus="true"] #nav-bar #bookmarks-menu-button[cui-areatype="toolbar"] > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
-	  width: unset !important;;
+	  width: unset !important;
 	}
 	
 	#nav-bar #urlbar,
@@ -190,6 +205,14 @@
 		  width: 18px !important;
 		  height: 18px !important;
 		}
+	}
+	
+	/*Fx45+ fix*/
+	#main-window[fx45plus="true"] #nav-bar #urlbar-wrapper,
+	#main-window[fx45plus="true"] #nav-bar #urlbar,
+	#main-window[fx45plus="true"] #nav-bar .searchbar-textbox{
+	  min-height: 28px !important;
+	  height: 28px !important;
 	}
 
 }
