--- a/xpi/content/css/navbar_compact.css
+++ b/xpi/content/css/navbar_compact.css
@@ -5,6 +5,7 @@
 
 	#nav-bar-customization-target > toolbaritem:not(#search-container):not(#urlbar-container) toolbarbutton,
 	#nav-bar-customization-target > toolbarbutton toolbarbutton,
+	#nav-bar-customization-target > toolbarbutton > dropmarker,
 	#nav-bar-customization-target > #bookmarks-menu-button .toolbarbutton-menubutton-dropmarker,
 	#nav-bar-customization-target > toolbarbutton,
 	#nav-bar-overflow-button {
