--- a/xpi/content/css/alt_autocomplete.css
+++ b/xpi/content/css/alt_autocomplete.css
@@ -2,22 +2,20 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 @-moz-document url(chrome://browser/content/browser.xul) {
-	
-	panel[type="autocomplete-richlistbox"],
-	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] {
-	  -moz-binding: url("chrome://classic_theme_restorer/content/urlbarBindings.xml#urlbar-rich-result-popup") !important;
-	}
-	
+
+	/* Richlist item code for Firefox 48 and 49 */
 	panel[type="autocomplete-richlistbox"] .autocomplete-richlistitem,
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistitem {
 	  -moz-binding: url("chrome://classic_theme_restorer/content/urlbarBindings.xml#autocomplete-richlistitem") !important;
 	}
-
-	#main-window[fx50plus="true"] panel[type="autocomplete-richlistbox"],
-	#main-window[fx50plus="true"] #PopupAutoCompleteRichResult[autocompleteinput="urlbar"] {
+	
+	/* Firefox 51 popup code works fine with Firefox 48+ */
+	panel[type="autocomplete-richlistbox"],
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] {
 	  -moz-binding: url("chrome://classic_theme_restorer/content/urlbarBindings51.xml#urlbar-rich-result-popup") !important;
 	}
 
+	/* Richlist item code for Firefox 50 beta2+ and 51+; (50b1 not supported anymore)*/
 	#main-window[fx50plus="true"] panel[type="autocomplete-richlistbox"] .autocomplete-richlistitem,
 	#main-window[fx50plus="true"] #PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistitem {
 	  -moz-binding: url("chrome://classic_theme_restorer/content/urlbarBindings51.xml#autocomplete-richlistitem") !important;
@@ -64,10 +62,8 @@
 	  margin-top:-2px !important;
 	}
 
-	panel[type="autocomplete-richlistbox"] .autocomplete-richlistitem .ac-action,
-	panel[type="autocomplete-richlistbox"] .autocomplete-richlistitem .ac-url,
-	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistitem .ac-action,
-	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistitem .ac-url{
+	panel[type="autocomplete-richlistbox"] .autocomplete-richlistitem :-moz-any(.ac-url, .ac-action),
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistitem :-moz-any(.ac-url, .ac-action){
 	  -moz-margin-start: 21px !important;
 	}
 
