--- a/xpi/content/css/oldsearch.css
+++ b/xpi/content/css/oldsearch.css
@@ -10,7 +10,15 @@
 	#main-window:not([searchwp-moz-platform]) searchbar .searchbar-textbox {
 	  -moz-binding: url("chrome://classic_theme_restorer/content/ctr_oldsearch.xml#searchbar-textbox") !important;
 	}
-
+	
+	#main-window[fx52plus="true"] searchbar {
+	  -moz-binding: url("chrome://classic_theme_restorer/content/ctr_oldsearch52.xml#searchbar") !important;
+	}
+	
+	#main-window[fx52plus="true"]:not([searchwp-moz-platform]) searchbar .searchbar-textbox {
+	  -moz-binding: url("chrome://classic_theme_restorer/content/ctr_oldsearch52.xml#searchbar-textbox") !important;
+	}
+	
 	.searchbar-engine-button {
 	  -moz-appearance: none !important;
 	  min-width: 0 !important;
@@ -21,14 +29,12 @@
 	  -moz-box-align: center !important;
 	  background: none !important;
 	  border: none !important;
-
 	}
 
 	.searchbar-engine-image {
 	  list-style-image: unset !important;
 	}
 
-  
 	#navigator-toolbox #nav-bar  .searchbar-engine-button {
 	  min-height: unset !important;	
 	}
@@ -96,5 +102,31 @@
 	#urlbar-search-footer{
 	  display:none !important;
 	}
+	
+	/* Fx52+ fixes*/
+	#main-window[fx52plus="true"] #PopupSearchAutoComplete .tree-scrollbar,
+	#main-window[fx52plus="true"] #PopupSearchAutoComplete .search-one-offs,
+	#main-window[fx52plus="true"] #PopupSearchAutoComplete .search-panel-header{
+	  display: none !important;
+	}
+	 
+	#main-window[fx52plus="true"] #PopupSearchAutoComplete {
+	  min-width: unset !important;
+	  margin-inline-start: unset !important;
+	}
+	
+	#main-window[fx52plus="true"] #PopupSearchAutoComplete .search-panel-tree > .autocomplete-treebody::-moz-tree-image(fromhistory),
+	#main-window[fx52plus="true"] #PopupSearchAutoComplete .search-panel-tree > .autocomplete-treebody::-moz-tree-image(fromhistory, selected) {
+	  list-style-image: unset !important;
+	}
 
+	#main-window[fx52plus="true"] #PopupSearchAutoComplete .search-panel-tree > .autocomplete-treebody::-moz-tree-image {
+	  padding-inline-start: unset !important;
+	  width: unset !important;
+	  height: unset !important;;
+	}
+	
+	#main-window[fx52plus="true"] #PopupSearchAutoComplete .search-panel-tree > .autocomplete-treebody {
+	  margin-bottom: -4px !important;
+	}
 }
